<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_floating_material_dark"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.hackathon.rutgersexchange.activity.LoginActivity">

    <include
        android:id="@+id/include"
        layout="@layout/activity_login_header"
        android:layout_width="match_parent" android:layout_height="75dp"/>


    <EditText
        android:id="@+id/login_activity_email_text"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:background="@color/background_floating_material_light"
        android:hint="@string/login_hint"
        android:maxLength="30"/>

    <EditText
        android:id="@+id/login_activity_passwd_text"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="@color/background_floating_material_light"
        android:ems="10"
        android:hint="@string/passwd_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/login_activity_email_text"
        android:layout_alignStart="@+id/login_activity_email_text"/>

    <Button
        android:id="@+id/login_activity_login_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_activity_passwd_text"
        android:layout_alignStart="@+id/login_activity_passwd_text"
        android:layout_below="@+id/login_activity_passwd_text"
        android:layout_marginTop="36dp"
        android:text="Login"/>
    <Button
        android:id="@+id/login_activity_register_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_activity_passwd_text"
        android:layout_alignRight="@+id/login_activity_passwd_text"
        android:layout_alignTop="@+id/login_activity_login_bttn"
        android:text="@string/register"/>
    <TextView
        android:id="@+id/login_activity_or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_activity_login_bttn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/or"/>

</RelativeLayout>
